# OOP_labs_3sem2024

./: .gitignore  CMakeLists.txt  README.md
labs/laba1/: CMakeLists.txt
labs/laba1/include/: solution.cpp  solution.h
labs/laba1/src/: main.cpp
labs/laba1/tests/: unit.cpp
labs/laba2/include/: solution.cpp  solution.h
labs/laba2/src/: main.cpp
labs/laba2/tests/: unit.cpp
